app/src/main/java/com/example/bookclub/errors/StudyCommentLikeNotFoundException.java
package com.example.bookclub.errors;

public class StudyCommentLikeNotFoundException extends RuntimeException {
	public StudyCommentLikeNotFoundException(Long id) {
		super("StudyCommentLike Not Found: " + id);
	}
}
